[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ponderchat"
version = "0.1.0"
description = "CLI that selects the appropriate Claude model and reasoning depth per prompt"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.0.10",
    "mlx-lm>=0.0.6",
    "anthropic>=0.40.0",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["ponderchat"]

[project.scripts]
ponderchat = "ponderchat:main"
